--- a/ZadanieASP1/ZadanieASP1.csproj
+++ b/ZadanieASP1/ZadanieASP1.csproj
@@ -39,4 +39,8 @@
     <PackageReference Include="WebDriverManager" Version="2.17.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
